@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9931 2005/04/20 15:31:11 wiz Exp $
+$NetBSD: CHANGES,v 1.9932 2005/04/20 15:33:00 abs Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -2136,3 +2136,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated p5-razor-agents to 2.67 [heinz 2005-04-20]
 	Updated DatLib to 2.5 [wiz 2005-04-20]
 	Updated DatUtil to 2.17 [wiz 2005-04-20]
+	Updated pkg_chk to 1.57 [abs 2005-04-20]
+
